2007-03-07  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate/Base.pm: add do_direct to public API
	* SelfUpdate.pm, SelfUpdate/rsync.pm: migrate &SU::do_direct_rsync
	to SU::rsync->do_direct
	* Selfupdate.pm, SelfUpdate/point.pm: Consolidate all
	tarball/point stuff related to &SU::do_tarball, migrate it to
	SU::tarball->do_direct
	* SelfUpdate.pm: Misc cleanups

2007-03-07  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate/tarball.pm: delete (redundant vs "point" method)

2007-03-06  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate/CVS.pm, SelfUpdate/rsync.pm: missing inclusion

2007-03-06  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm, SelfUpdate/*.pm: Use SU::Base instead of SU as
	base class for SU::$method classes

2007-03-06  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Use text-string params for check().
	* SelfUpdate.pm, SelfUpdate/*.pm: Offload handling of stamp files
	and removal of orphaned metadata into the method-specific classes.

2007-03-04  Dave Morrison  <drm@finkproject.org>

	* FinkVersion.pm.in, PkgVersion.pm, Validation.pm: implement Info4

2007-03-01  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: Added a "DownloadTimeout" option for curl
	so that the mirror doesn't wait indefinitely on bad
	downloads.
	* Base.pm: Updated to lower-case keys in new_from_properties
	like new_from_file does.

2007-02-26  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Scrap the high-level warning for splitoff
	validation failure.

2007-02-25  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: added support for detecting /usr/X11

2007-02-17  Dave Morrison  <drm@finkproject.org>

	* SysState.pm: when advising the user to run 'apt-get', the advice
	should be to run 'sudo apt-get'

2007-02-15  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: set a timeout on curl, since it can block
	indefinitely while connecting, in some cases